Fix: Fix the font to work as expected

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
-
 @import "tailwindcss";
 
 html,
@@ -11,11 +9,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  font-family: var(--font-georama);
 }
 
 @theme {
-  --font-georama: "Georama", sans-serif;
-  --font-roboto: "Roboto Mono", monospace;
+  --font-georama: var(--font-georama);
+  --font-roboto: var(--font-roboto-mono);
   --breakpoint-3xl: 1920px;
 }
 
