fix: navbar themes

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,22 +63,34 @@ body {
       &:last-child {
         @apply max-sm:hidden;
       }
+
+      p {
+        @apply text-white;
+      }
+
+      img {
+        @apply brightness-0 invert;
+      }
     }
 
     ul {
       @apply flex items-center gap-5 max-sm:hidden;
 
       p {
-        @apply text-sm cursor-pointer hover:underline transition-all;
+        @apply text-sm cursor-pointer hover:underline transition-all text-white;
       }
 
       li {
         @apply transition-transform active:scale-95;
       }
+
+      img {
+        @apply brightness-0 invert;
+      }
     }
 
     time {
-      @apply text-sm font-medium text-black dark:text-white transition-colors;
+      @apply text-sm font-medium text-white transition-colors;
     }
   }
 
@@ -407,7 +419,7 @@ body {
 
 
     .preview {
-      @apply p-2 bg-gray-200 max-h-[85vh] overflow-hidden;
+      @apply p-2 bg-gray-200 dark:bg-gray-900 max-h-[85vh] overflow-hidden;
 
       img {
         @apply w-full h-auto object-contain block mx-auto rounded-sm;
